# cursor_seperator_rust

./: Cargo.toml
src/: coords.rs  debug_viz.rs  lib.rs  main.rs  predictions.rs  scstream.rs  session_loader.rs
src/cursor_action/: detector.rs  mod.rs  model.rs  tap.rs
src/mlp/: clips.rs  config.rs  io.rs  mod.rs  model.rs  train.rs  types.rs
src/recorder/: masks.rs  mod.rs  record.rs  session.rs  writer.rs
src/typing/: detector.rs  diff.rs  mod.rs  ring.rs  tap.rs
src/windows/: compositor.rs  coords.rs  masks.rs  mod.rs  model.rs  sampler.rs
