[package]
name = "rust_cursor_bench"
version = "0.1.0"
edition = "2021"
default-run = "rust_cursor_bench"

[dependencies]
objc       = "0.2"
block      = "0.1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
png        = "0.17"
image      = { version = "0.25", default-features = false, features = ["jpeg"] }
jpeg-decoder = { version = "0.3", default-features = false }
rerun      = "0.33"

# ML / training pipeline
candle-core = "0.9"
candle-nn   = "0.9"
npyz        = "0.8"
zip         = "0.6"
rand        = "0.8"
clap        = { version = "4", features = ["derive"] }

[[bin]]
name = "rust_cursor_bench"
path = "src/main.rs"

[[bin]]
name = "model_input_viz"
path = "src/bin/model_input_viz.rs"

[[bin]]
name = "prediction_viz"
path = "src/bin/prediction_viz.rs"

[[bin]]
name = "train_mlp"
path = "src/bin/train_mlp.rs"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg()'] }

[profile.release]
opt-level = 3
lto = "thin"
